# cookiecutter-transformers-inference

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .env.container  .env.local  README.md  docker-compose.yml  run_configuration.sh
{{ cookiecutter.repo_name }}/compose/: docker-compose.infra.expose.yml  docker-compose.infra.yml  docker-compose.yml
{{ cookiecutter.repo_name }}/src/backend/: Dockerfile  pyproject.toml
{{ cookiecutter.repo_name }}/src/backend/apps/: app.py  checks.py  s3.py
{{ cookiecutter.repo_name }}/src/backend/apps/celery/: celery_app.py  celery_config.py
{{ cookiecutter.repo_name }}/src/backend/templates/: index.html  result.html
{{ cookiecutter.repo_name }}/src/worker/: Dockerfile.cpu  Dockerfile.gpu  pyproject.toml
{{ cookiecutter.repo_name }}/src/worker/apps/: s3.py  settings.py  tasks.py
{{ cookiecutter.repo_name }}/src/worker/apps/celery/: celery_config.py
