[tool.poetry]
name = "{{ cookiecutter.description }}.backend"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.3"
aioboto3 = "^12.4.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
celery = { extras = ["redis"], version = "^5.4.0" }
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
