[tool.poetry]
name = "{{ cookiecutter.description }}.worker"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
celery = { extras = ["redis"], version = "^5.4.0" }
redis = "^5.0.3"
boto3 = "^1.34.103"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
